avatar + img optimiz

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 				</div>
 				<div class="worker">
 					<div class="worker__avatar"></div>
-					<div class="worker__name">Lura Stegner</div>
-					<div class="worker__profession">senior meneger</div>
+					<div class="worker__name">Anton Stegner</div>
+					<div class="worker__profession">meneger</div>
 					<div class="worker__line"></div>
 					<div class="worker__contacts">
 						<a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -64,8 +64,8 @@
 				</div>
 				<div class="worker">
 					<div class="worker__avatar"></div>
-					<div class="worker__name">Lura Stegner</div>
-					<div class="worker__profession">senior meneger</div>
+					<div class="worker__name">Lisa Haddon</div>
+					<div class="worker__profession">accounter</div>
 					<div class="worker__line"></div>
 					<div class="worker__contacts">
 						<a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -76,8 +76,8 @@
 				</div>
 				<div class="worker">
 					<div class="worker__avatar"></div>
-					<div class="worker__name">Lura Stegner</div>
-					<div class="worker__profession">senior meneger</div>
+					<div class="worker__name">Bredley Grosh</div>
+					<div class="worker__profession">director</div>
 					<div class="worker__line"></div>
 					<div class="worker__contacts">
 						<a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
